--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "minecrafthawkeye": "^1.3.6",
     "mineflayer": "^4.10.0",
+    "mineflayer-pathfinder": "^2.4.4",
     "nodemon": "^2.0.22"
   }
 }
